Fixed button link bug
Margin of new button covering other buttons

--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,6 @@ a, a:hover {
     margin-left: 60px;
     border-radius: 4px;
     padding: 15px 25px 15px 25px;
-    margin-top: 50px;
     text-transform: uppercase;
     font-size: 12px;
     border: none;
